issue #2365 - Menu popup for a post is not completely visible

--- a/src/components/ActionCard/Comment.scss
+++ b/src/components/ActionCard/Comment.scss
@@ -3,7 +3,6 @@
 .container {
   display: flex;
   padding: $base-unit 4 * $base-unit;
-  overflow-x: auto;
 
   &.self:not(.is-deleting):hover {
     background-color: $tc-gray-neutral-light;
@@ -33,6 +32,7 @@
   flex: 1;
   margin-left: 2 * $base-unit;
   position: relative;
+  min-width: 0;
 }
 
 .header {
@@ -85,6 +85,7 @@
   color: $tc-black;
   font-size: 13px;
   line-height: 20px;
+  overflow-x: auto;
 }
 
 .comment-editor {
